Fixes side scroll which appears on mobile devices
[Finishes: #132350317](https://www.pivotaltracker.com/story/show/132350317)

--- a/src/components/viewport/Viewport.css
+++ b/src/components/viewport/Viewport.css
@@ -7,6 +7,10 @@
   visibility: hidden;
 }
 
+#root {
+  overflow-x: hidden;
+}
+
 /*
  * A probe into CSS used by the ResizeComponent
  * Has to be the #root element since it is already present in the DOM. Would be
